--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,28 +1,33 @@
-.main{
+.main {
   display: flex;
-  flex-direction: column;}
-
-.video{
-  position: absolute;
-  object-fit: cover;
-  max-width: 100%;
-  height: 100%;
-}
-.head{
+  justify-content: center;
   position: relative;
-  background: rgba(0,0,0,0.5);
+  padding-bottom: 56.25%;
+  min-height: 100vh;
 }
+.video {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: auto;
+  min-height: 100vh;
+}
+
 .wrapper{
-  margin-top: 200px;
+  z-index: 3;
+  position: absolute;
   padding: 20px;
   display: flex;
-  align-items: center;
   flex-direction: column;
-
-}.description{
+  align-items: center;
+  color: black;
+}
+.description {
    position: relative;
- }
-.specialOffers{
+  margin-top: 300px;
+}
+.specialOffers {
   position: relative;
   border: black solid 3px;
   padding: 10px;
