--- a/src/components/Calculator/components/CheckboxAndPrice/CheckboxAndPrice.module.scss
+++ b/src/components/Calculator/components/CheckboxAndPrice/CheckboxAndPrice.module.scss
@@ -1,17 +1,9 @@
 .checkboxAndPrice{
   display: flex;
+  flex-direction: column;
 }
-
-.checkboxAndText{
-  width: 50%;
-}
-
-
-
-
-
 .priceAndButton{
-  width: 50%;
+  padding: 20px 0  ;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,3 +26,16 @@
   line-height: 32px;
   font-weight: 700;
 }
+
+@media (min-width: 1000px) {
+  .checkboxAndPrice {
+ flex-direction: row;
+    }
+  .checkboxAndText{
+    width: 50%;
+  }
+  .priceAndButton{
+    width: 50%;}
+  }
+
+
